--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,7 +35,7 @@ header {
     background-color: #000000;
     padding: 2rem;
     color: #FFFFFF;
-    background-image: url('assets/images/circuit-head.jpg'); /* The circuit-head image */
+    background-image: url('../images/circuit-head.jpg'); /* The circuit-head image */
     background-size: contain;
     background-position: right center;
     background-repeat: no-repeat;
