--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,7 @@ body {
     background-color: #000000;
     padding: 2rem;
     color: #FFFFFF;
-    background-image: url('../images/circuit-head.jpg');
+    background-image: url('circuit-head.jpg');
     background-size: contain;
     background-position: right center;
     background-repeat: no-repeat;
