--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,7 @@ body {
     color: #FFFFFF;
     background-image: url('circuit-head.jpg');
     background-size: contain;
-    background-position: right center;
+    background-position: right centre;
     background-repeat: no-repeat;
     min-height: 200px;
     display: flex;
@@ -24,8 +24,8 @@ body {
 
 .header-content-center {
     display: flex;
-    justify-content: center;
-    align-items: center;
+    justify-content: left;
+    align-items: left;
 }
 
 .ai-logo {
